// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardGrid /> Controlled Rendering renders with controlled columnSizes 1`] = `
<div
  className="pgn__card-grid"
>
  <div
    className="row"
  >
    <div
      className="col-lg-4 col-md-6 col-12"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
          src="https://source.unsplash.com/360x200/?nature,flower"
        />
        <div
          className="card-body"
        >
          <div
            className="card-title h5"
          >
            Card title
          </div>
          <p
            className="card-text"
          >
            This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
          </p>
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          >
            Last updated 3 mins ago
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CardGrid /> Uncontrolled Rendering renders default columnSizes 1`] = `
<div
  className="pgn__card-grid"
>
  <div
    className="row"
  >
    <div
      className="col-xl-4 col-lg-6 col-sm-12"
    >
      <div
        className="card"
      >
        <img
          className="card-img-top"
          src="https://source.unsplash.com/360x200/?nature,flower"
        />
        <div
          className="card-body"
        >
          <div
            className="card-title h5"
          >
            Card title
          </div>
          <p
            className="card-text"
          >
            This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.
          </p>
        </div>
        <div
          className="card-footer"
        >
          <small
            className="text-muted"
          >
            Last updated 3 mins ago
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;
